# chaosgame

./: .gitignore  CMakeLists.txt  README.md
helpers/: helper.cpp  helper.h
helpers/Common/: Uncopiable.h
helpers/Game/: myGame.cpp  myGame.h
helpers/Game/State/: GameState.h  StateGame.cpp  StateGame.h  StateManager.cpp  StateManager.h  StateMenu.cpp  StateMenu.h
helpers/Input/: SimpleInputManager.h
helpers/SDL/: SDLManager.cpp  SDLManager.h  SDLTexture.cpp  SDLTexture.h
project/: main.cpp
project/Sources/: GameImGui.h  SDLImgui.cpp  SDLImgui.h  Vector2.h  definitions.cpp  definitions.h  functions.cpp  functions.h
test/: test_main.cpp
